--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,7 @@
 body {
     font-family: arial;
 }
-h1, h2, h3 {
+h1 {
     text-align: center;
 }
 
@@ -16,9 +16,8 @@ img {
 }
 
 /* utilities */
-.btn-black {
+.btn {
     display: inline-block;
-    background-color: black;
     color: white;
     padding: 10px;
     margin-bottom: 20px;
@@ -27,6 +26,15 @@ img {
     font-size: 12px;
     letter-spacing: 2px;
 }
+
+.btn-black {
+    background-color: black;
+}
+
+.btn-brown {
+    background-color: brown;
+}
+
 .container{
     width: 80%;
     margin-left: auto;
