--- a/mystyle.css
+++ b/mystyle.css
@@ -41,7 +41,15 @@ img {
     margin-right: auto;
 }
 
+
+
 /* header */
+.header-flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .primary-header {
     background-image: url(img/banner.jpg);
     background-position: center center;
@@ -50,3 +58,25 @@ img {
     color: white;
     text-align: center;
 }  
+
+.menu a{
+    color: white;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+/* main */
+
+.main-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.blog-container {
+    width: 60%;
+    margin-right: 10px;
+}
+
+.courses-container {
+    width: 40%;
+}
