--- a/mystyle.css
+++ b/mystyle.css
@@ -41,8 +41,6 @@ img {
     margin-right: auto;
 }
 
-
-
 /* header */
 .header-flex {
     display: flex;
@@ -59,13 +57,17 @@ img {
     text-align: center;
 }  
 
+.secondary-header {
+    background-color: black;
+    height: 100px;
+    color: white;
+}
+
 .menu a{
     color: white;
     text-decoration: none;
     margin-right: 10px;
 }
-
-/* main */
 
 .main-flex {
     display: flex;
@@ -80,6 +82,19 @@ img {
 
 .about-flex h2 {
     text-align: center;
+}
+
+.contact-flex {
+    display: flex;
+    flex-direction: column;
+}
+.contact-flex h2 {
+    text-align: center;
+}
+
+.contact-flex img {
+    height: auto;
+    object-fit: cover;
 }
 
 .blog-container {
@@ -97,6 +112,7 @@ img {
     color: white;
     padding: 20px 0;
     text-align: center;
+    margin-top: 10px;
 }
 .footer-content {
     display: flex;
@@ -109,4 +125,81 @@ img {
     color: white;
     margin-left: 20px;
     text-decoration: none;
+}
+
+/* form */
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container {
+    margin-top: -80px;
+}
+
+form {
+    background-color: white;
+    padding: 20px;
+}
+
+input, textarea {
+    width: 60%;
+    border: 1px solid gray;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+label {
+    display: inline-block;
+    width: 100px;
+    text-align: left;
+}
+
+form div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.courses-page .courses-container {
+  display: flex;
+  gap: 10px;
+  width: max-content;
+  margin: 0 auto;
+}
+
+.courses-flex h2 {
+    text-align: center;
+}
+
+.courses-section {
+  width: 300px;
+  height: 400px;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.courses-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.courses-page p {
+  margin: 0;
+  padding: 0;
+}
+
+.courses-page .courses-section .text-box {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 35%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: left;
+  padding: 10px;
+  font-size: 16px;
 }
